// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button add custom class 1`] = `
<button
  className="button__round"
  onClick={[Function]}
>
  auth
</button>
`;

exports[`Storyshots Button with Login text 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  Sign In
</button>
`;

exports[`Storyshots Button with submit text 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  Submit
</button>
`;

exports[`Storyshots Button without classname prop 1`] = `
<button
  className="button__primary"
  onClick={[Function]}
>
  no class
</button>
`;

exports[`Storyshots Form With header 1`] = `
Array [
  <h5>
    Form Header
  </h5>,
  <form
    className="ui form "
  >
    <div
      className="ui form"
    >
      <div
        className="field class"
      >
        <label
          htmlFor="email"
        >
          Email address
          <input
            id="email"
            name="email"
            onChange={[Function]}
            placeholder="Email address"
            type="text"
            value=""
          />
          <i
            className="form--error"
          />
        </label>
      </div>
      <div
        className="ui button"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="presentation"
      >
        Submit
        <div
          className="ui  loader"
        />
      </div>
    </div>
    
  </form>,
]
`;

exports[`Storyshots Form Without header 1`] = `
Array [
  "",
  <form
    className="ui form "
  >
    <div
      className="ui form"
    >
      <div
        className="field class"
      >
        <label
          htmlFor="email"
        >
          Email address
          <input
            id="email"
            name="email"
            onChange={[Function]}
            placeholder="Email address"
            type="text"
            value=""
          />
          <i
            className="form--error"
          />
        </label>
      </div>
      <div
        className="ui button"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="presentation"
      >
        Submit
        <div
          className="ui  loader"
        />
      </div>
    </div>
    
  </form>,
]
`;

exports[`Storyshots Icon active 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote icon--active"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon downvote 1`] = `
<button
  aria-label="downvote"
  className="icon icon--downvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Icon upvote 1`] = `
<button
  aria-label="upvote"
  className="icon icon--upvote"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
/>
`;

exports[`Storyshots Input field with email name 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Email"
    type="text"
  />
</label>
`;

exports[`Storyshots Input password field 1`] = `
<label
  className="input__label"
  htmlFor="email"
>
  <input
    className="input__field"
    name="email"
    onChange={[Function]}
    placeholder="Password"
    type="password"
  />
</label>
`;

exports[`Storyshots Modal click closed modal button 1`] = `
<div
  className="modal modal--hide"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Create your free account
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <div
          className="modal__social-login"
        >
          JONATUS COMPONENT
        </div>
        <div
          className="modal__setup-tag"
        >
          <p>
            Already have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign in
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal click sign in 1`] = `
<div
  className="modal modal--show"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Welcome back
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <form
          className="login-form"
          onSubmit={[Function]}
        >
          <div
            className="login-form__success login-form__success--hide"
          >
            SIGNIN SUCCESSFUL !
          </div>
          <label
            className="input__label"
            htmlFor="email"
          >
            <input
              className="input__field"
              name="email"
              onChange={[Function]}
              placeholder="Email Address"
              type="text"
            />
          </label>
          <label
            className="input__label"
            htmlFor="password"
          >
            <input
              className="input__field"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              type="password"
            />
          </label>
          <section
            className="login-form__errors"
          />
          <section
            className="login-form__submit-btn"
          >
            <button
              className="button__primary"
              type="submit"
            >
              Sign in
            </button>
          </section>
        </form>
        <div
          className="modal__setup-tag"
        >
          <p>
            Don't have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign up
            </button>
          </p>
          <p>
            Forgot your password ?  
            <span
              className="modal__create-account"
            >
              Reset password
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal default signup view 1`] = `
<div
  className="modal modal--show"
>
  <div
    className="modal__modal-content"
  >
    <button
      className="modal__close"
      onClick={[Function]}
      type="button"
    >
      ✕
    </button>
    <div
      className="modal__left"
    >
      <h2
        className="modal__head"
      >
        Share your stories
      </h2>
      <h1
        className="modal__welcome"
      >
        Create your free account
      </h1>
      <p
        className="modal__text"
      >
        Sign into your account to serve you more personalised stories from creatives
      </p>
    </div>
    <div
      className="modal__right"
    >
      <h4
        className="modal__heading"
      >
        Select one to get started
      </h4>
      <div
        className="modal__social-login"
      >
        IBUKUN COMPONENT
      </div>
      <div
        className="modal__seperator"
      >
        <p>
          or
        </p>
      </div>
      <div
        className="modal__auth-component"
      >
        <div
          className="modal__social-login"
        >
          JONATUS COMPONENT
        </div>
        <div
          className="modal__setup-tag"
        >
          <p>
            Already have an account ? 
            <button
              className="modal__create-account"
              onClick={[Function]}
              type="button"
            >
              Sign in
            </button>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Signin sign in form 1`] = `
<form
  className="login-form"
  onSubmit={[Function]}
>
  <div
    className="login-form__success login-form__success--hide"
  >
    SIGNIN SUCCESSFUL !
  </div>
  <label
    className="input__label"
    htmlFor="email"
  >
    <input
      className="input__field"
      name="email"
      onChange={[Function]}
      placeholder="Email Address"
      type="text"
    />
  </label>
  <label
    className="input__label"
    htmlFor="password"
  >
    <input
      className="input__field"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
    />
  </label>
  <section
    className="login-form__errors"
  />
  <section
    className="login-form__submit-btn"
  >
    <button
      className="button__primary"
      type="submit"
    >
      Sign in
    </button>
  </section>
</form>
`;

exports[`Storyshots Message Error 1`] = `
<div
  className="ui error message"
>
  <i
    className="close icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="presentation"
  />
  <div
    className="header"
  >
    There were some errors with your submission
  </div>
  <ul
    className="list"
  >
    <li>
      message 1
    </li>
    <li>
      message 2
    </li>
  </ul>
</div>
`;

exports[`Storyshots Message With Heading 1`] = `
<div
  className="ui  message"
>
  <i
    className="close icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="presentation"
  />
  <div
    className="header"
  >
    There were some errors with your submission
  </div>
  <ul
    className="list"
  />
</div>
`;

exports[`Storyshots Message With messages 1`] = `
<div
  className="ui  message"
>
  <i
    className="close icon"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="presentation"
  />
  <div
    className="header"
  >
    There were some errors with your submission
  </div>
  <ul
    className="list"
  >
    <li>
      message 1
    </li>
    <li>
      message 2
    </li>
  </ul>
</div>
`;

exports[`Storyshots Message Without Heading 1`] = `null`;

exports[`Storyshots Password Reset Password Reset Form 1`] = `
<div
  className="password-reset"
>
  <span>
    Reset password
  </span>
  <span>
    Enter your email address
  </span>
  <span>
    We will send you a password reset link
  </span>
  
  <form
    className="ui form "
  >
    <div
      className="ui form"
    >
      <div
        className="field undefined"
      >
        <label
          htmlFor="email"
        >
          
          <input
            id="email"
            name="email"
            onChange={[Function]}
            placeholder="Email address"
            type="text"
            value=""
          />
          <i
            className="form--error"
          />
        </label>
      </div>
      <div
        className="ui button"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="presentation"
      >
        Reset
        <div
          className="ui  loader"
        />
      </div>
    </div>
    
  </form>
</div>
`;

exports[`Storyshots Password Update Password update Form 1`] = `
<div
  className="password-reset"
>
  <span>
    Update password
  </span>
  <span>
    Enter your new password
  </span>
  
  <form
    className="ui form "
  >
    <div
      className="ui form"
    >
      <div
        className="field undefined"
      >
        <label
          htmlFor="password"
        >
          
          <input
            id="password"
            name="password"
            onChange={[Function]}
            placeholder="password"
            type="password"
            value=""
          />
          <i
            className="form--error"
          />
        </label>
      </div>
      <div
        className="field undefined"
      >
        <label
          htmlFor="confirmPassword"
        >
          
          <input
            id="confirmPassword"
            name="confirmPassword"
            onChange={[Function]}
            placeholder="confirm password"
            type="password"
            value=""
          />
          <i
            className="form--error"
          />
        </label>
      </div>
      <div
        className="ui button"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        role="presentation"
      >
        Update
        <div
          className="ui  loader"
        />
      </div>
    </div>
    
  </form>
</div>
`;

exports[`Storyshots Vote downvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      11
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote nullvote 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      29
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;

exports[`Storyshots Vote upvoted 1`] = `
<div
  className="vote"
>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="upvote"
      className="icon icon--upvote icon--active"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className="active"
    >
      30
    </span>
  </div>
  <div
    className="vote__wrapper"
  >
    <button
      aria-label="downvote"
      className="icon icon--downvote"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    />
    <span
      className=""
    >
      10
    </span>
  </div>
</div>
`;
